# BSpline

./: CMakeLists.txt  main.cpp
include/: DataStruct.h  globalFunction.h
input/: input.json
src/: BSpline.cpp  BSpline.h  CMakeLists.txt
